MongoDB/Platform/dev/platform-dev-mongodb-express.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express
  labels: 
    app: mongodb-express
    app.kubernetes.io/instance: mongodb
  namespace: mongodb-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb-express
      app.kubernetes.io/instance: mongodb
  template:
    metadata:
      labels:
        app: mongodb-express
        app.kubernetes.io/instance: mongodb
    spec:
      tolerations:
        - key: dedicated
          operator: Equal
          value: mongodb
          effect: NoSchedule
      containers:
      - image: docker.io/library/mongo-express:1.0.2
        imagePullPolicy: Always
        name: mongo-express
        ports:
          - containerPort: 8081
            name: mongo-express
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
         tcpSocket:
           port: 8081
         initialDelaySeconds: 600
         periodSeconds: 10
        readinessProbe:
         tcpSocket:
           port: 8081
         initialDelaySeconds: 30
         periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-svc
spec:
  selector:
    app: mongodb-express
    app.kubernetes.io/instance: mongodb
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
