MongoDB/Platform/dev/platform-dev-mongodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elb-mongodb 
  namespace: mongodb-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: my-nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "NGINX_WHITELIST_IP_ADDRESS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - MONGO_EXPRESS_HOST
      secretName: crt-secret
  rules:
    - host: MONGO_EXPRESS_HOST  # MongoDB에 접근할 호스트명 설정
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongodb-express-svc  # MongoDB를 제공하는 Kubernetes Service 이름
                port:
                  number: 8081  # MongoDB 포트
